--- a/main.css
+++ b/main.css
@@ -8,7 +8,7 @@ body{
     color: #181818;
 }
 
-button{
+.darkmode{
     position: relative;
     top: 30px;
     left: 28px;
@@ -23,10 +23,10 @@ button{
     transition: padding 0.15s, color 0.3s;
     border-radius: 5px;
 }
-button:hover{
+.darkmode:hover{
     color: #3d9bf8;
 }
-button:active{
+.darkmode:active{
     padding: 9px 19px;
 }
 
@@ -37,6 +37,75 @@ button:active{
     left: 45px;
     font-size: 25px;
 }
+.cookie-melding{
+    display: flex;
+    position: fixed;
+    justify-content: center;
+    align-items: center;
+    top: 13%;
+    left: 30%;
+    min-width: 700px;
+    min-height: 700px;
+    z-index: 1000;
+    background-color: rgb(48, 48, 48);
+    color: aliceblue;
+    border: #3d9bf8 solid;
+    border-radius: 5px;
+}
+.blur-background {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    backdrop-filter: blur(5px);
+    z-index: 1;
+}
+
+.cookie-melding p{
+    max-width: 600px;
+    font-size: 30px;
+    margin-top: -200px;
+}
+.cookie-melding p a{
+    text-decoration: none;
+}
+.buttons{
+    display: flex;
+    position: absolute;
+    flex-direction: row;
+    gap: 50px;
+    margin: 0 auto;
+    top: 600px;
+    color: black;
+}
+.button-accept button{
+    border: solid #3d9bf8;
+    padding: 15px 100px;
+    border-radius: 5px;
+    font-size: 30px;
+    cursor: pointer;
+    background-color: #181818;
+    color: aliceblue;
+    transition: color 0.2s;
+}
+.button-accept button:hover{
+    color: #3d9bf8;
+}
+.button-decline button{
+    border: solid #3d9bf8;
+    padding: 15px 100px;
+    border-radius: 5px;
+    font-size: 30px;
+    cursor: pointer;
+    background-color: #181818;
+    color: aliceblue;
+    transition: color 0.2s;
+}
+.button-decline button:hover{
+    color: #3d9bf8;
+}
+
 
 /*/// HOMEPAGE. nav, top-line en footer zijn gebruikt in andere paginas ///*/
 
