--- a/main.css
+++ b/main.css
@@ -1,17 +1,27 @@
 body{
     background-color: #181818;
     color: aliceblue;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    margin: 0;
 }
+.page-wrapper{
+    flex: 1;
+}
+
+/* DARKMODE / COUNTDOWN */
 
 .lightMode{
     background-color: aliceblue;
     color: #181818;
 }
 
+.countdown-darkmode{
+    padding: 40px 0px 0px 30px;
+}
+
 .darkmode{
-    position: relative;
-    top: 30px;
-    left: 28px;
     color: inherit;
     background-color: inherit;
     border-radius: 5px;
@@ -32,9 +42,6 @@ body{
 
 #countdown{
     color: inherit;
-    position: relative;
-    top: 20px;
-    left: 45px;
     font-size: 25px;
 }
 
@@ -42,11 +49,12 @@ body{
 
 .cookie-melding{
     display: flex;
-    position: fixed;
+    position: absolute;
     justify-content: center;
     align-items: center;
-    top: 13%;
-    left: 30%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     min-width: 700px;
     min-height: 700px;
     z-index: 1000;
@@ -79,7 +87,7 @@ body{
     flex-direction: row;
     gap: 50px;
     margin: 0 auto;
-    top: 600px;
+    bottom: 5%;
     color: black;
 }
 .button-accept button{
@@ -112,6 +120,65 @@ body{
 
 /*/// HOMEPAGE. nav, top-line en footer zijn gebruikt in andere paginas ///*/
 
+@media screen and (max-width: 600px) {
+    .homepage-content{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        
+    }
+    .main-text{
+        padding: 1em;
+    }
+    .homepage-content img{
+        max-width: 300px;
+    }
+    #h{
+        font-size: 30px;
+    }
+    #a{
+        font-size: 25px;
+    }
+    #p{
+        font-size: 25px;
+    }
+    #contactme{
+        display: none;
+    }
+    nav ul li a{
+        display: none;
+    }
+    nav ul{
+        width: 100%;
+    }
+    nav .icon{
+        color: inherit;
+        float: right;
+        display: block;
+        font-size: 35px;
+        margin-right: 10px;
+    }
+}
+@media screen and (max-width: 600px) {
+    .nav.responsive {position: relative;}
+    .nav.responsive .icon {
+        position: absolute;
+        font-size: 35px;
+        right: 0;
+        top: 0;
+    }
+    .nav.responsive a {
+        display: block;
+        font-size: 25px;
+    }
+    .nav.responsive ul{
+        padding-top: 15px;
+        width: 100%;
+    }
+  }
+
+
+
 .top-line{
     width: 100%;
     height: 17px;
@@ -119,34 +186,37 @@ body{
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 1000; 
+    z-index: 998; 
 }
 
 
 footer{
     text-align: center;
     background-color: #3d9bf8;
-    margin-top: 200px;
+    width: 100%;
+    margin-top: 20px;
 }
 footer h2{
     color: aliceblue;
-    padding: 20px;
+    padding: 5px;
     font-size: 20px;
-    margin-bottom: 0px;
 }
 
 nav{
     display: flex;
-    height: 100px;
-    padding-top: 10px; 
+    justify-content: space-between;
+    max-width: 1300px;
+    margin: 0 auto;
+    align-items: center;
+    width: 100%;
 }
 
 nav ul {
+    padding: 0;
+    width: 50%;
     display: flex;
     list-style-type: none;
-    gap: 70px;
-    margin-left: 250px;
-    margin-top: 30px;
+    justify-content: space-between;
 }
 
 nav ul li a {
@@ -168,13 +238,20 @@ nav ul li a:active {
     color: #3d9bf8;
     font-size: 37px;
 }
+.icon{
+    display: none;
+}
 
 #contactme{
-    border: solid;
-    margin-left: 300px;
-    border-color: #3d9bf8;
+    border: solid #3d9bf8;
     transition: padding 0.15s, color 0.3s;
     border-radius: 5px;
+    font-weight: bold;
+    font-size: 40px;
+    text-decoration: none;
+    color: inherit;
+    padding: 10px;
+    transition: color 0.3s, padding 0.15s, font-size 0.15s; 
 }
 #contactme:hover{
     padding: 12px;
@@ -184,18 +261,27 @@ nav ul li a:active {
     padding: 10px;
 }
 
+.homepage-content{
+    display: flex;
+    max-width: 1300px;
+    padding-top: 70px;
+    margin: 0 auto;
+    width: 100%;
+    justify-content: space-between;
+}
+.main-text{
+    flex-direction: column;
+}
+
 .homepage-content h1{
     font-size: 40px;
-    margin-left: 100px;
     color: inherit;
     max-width: 700px;
 }
 
 .homepage-content img{
-    width: 450px;
+    min-width: 33%;
     border-radius: 50%;
-    height: 430px;
-    margin-left: 100px;
     border: 6px solid;
     border-color: inherit;
     transition: border 0.3s;
@@ -205,21 +291,13 @@ nav ul li a:active {
     cursor: pointer;
 }
 
-.homepage-content{
-    display: flex;
-    margin-top: 130px;
-    margin-left: 200px;
-    gap: 60px;
-}
 .homepage-content p{
     color: inherit;
     font-size: 35px;
-    margin-left: 100px;
     max-width: 600px;
 }
 
 .homepage-content a{
-    margin-left: 100px;
     border: solid;
     font-weight: bold;
     font-size: 35px;
