--- a/main.css
+++ b/main.css
@@ -117,6 +117,30 @@ body{
     color: #3d9bf8;
 }
 
+@media screen and (max-width: 600px){
+    .cookie-melding{
+        min-width: 400px;
+        min-height: 500px;
+    }
+    .cookie-melding p{
+        max-width: 350px;
+        font-size: 20px;
+        margin-top: -150px;
+    }
+    .button-accept button{
+        padding: 15px 40px;
+        border-radius: 5px;
+        font-size: 25px;
+    }
+    .button-decline button{
+        padding: 15px 40px;
+        border-radius: 5px;
+        font-size: 25px;
+    }
+    .buttons{
+        gap: 30px;
+    }
+}
 
 /*/// HOMEPAGE. nav, top-line en footer zijn gebruikt in andere paginas ///*/
 
